--- a/public/css/common.css
+++ b/public/css/common.css
@@ -76,3 +76,13 @@
 .bg_light_dark{
     background: rgba(54, 54, 54, 0.12) !important;
 }
+
+
+.table-responsive{
+    overflow-x: visible !important;
+}
+
+.table-responsive #serverTable thead{
+    position: sticky !important;
+    top: 0;
+}
